syntax="proto3";

package testprotos;

enum TestEnum {
    VAL0 = 0;
    VAL1 = 1;
    VAL2 = 2;
}

message TestMessage {
  double double_field = 1;
  float float_field = 2;
  int64 int64_field = 3;
  uint64 uint64_field = 4;
  int32 int32_field = 5;
  fixed64 fixed64_field = 6;
  fixed32 fixed32_field = 7;
  bool bool_field = 8;
  string string_field = 9;
  TestMessage message_field = 10;
  bytes bytes_field = 11;
  uint32 uint32_field = 12;
  TestEnum enum_field = 13;
  sfixed32 sfixed32_field = 14;
  sfixed64 sfixed64_field = 15;
  sint32 sint32_field = 16;
  sint64 sint64_field = 17;

  oneof oneof {
    int32 oneof_int32_field = 18;
    string oneof_string_field = 19;
  }

  map<string, int32> map_field = 20;
}

message TestRepeatedMessage {
  repeated double double_field = 1;
  repeated float float_field = 2;
  repeated int64 int64_field = 3;
  repeated uint64 uint64_field = 4;
  repeated int32 int32_field = 5;
  repeated fixed64 fixed64_field = 6;
  repeated fixed32 fixed32_field = 7;
  repeated bool bool_field = 8;
  repeated string string_field = 9;
  repeated TestMessage message_field = 10;
  repeated bytes bytes_field = 11;
  repeated uint32 uint32_field = 12;
  repeated TestEnum enum_field = 13;
  repeated sfixed32 sfixed32_field = 14;
  repeated sfixed64 sfixed64_field = 15;
  repeated sint32 sint32_field = 16;
  repeated sint64 sint64_field = 17;
}

message TestUnpackedRepeatedMessage {
  repeated double double_field = 1 [packed=false];
  repeated float float_field = 2 [packed=false];
  repeated int64 int64_field = 3 [packed=false];
  repeated uint64 uint64_field = 4 [packed=false];
  repeated int32 int32_field = 5 [packed=false];
  repeated fixed64 fixed64_field = 6 [packed=false];
  repeated fixed32 fixed32_field = 7 [packed=false];
  repeated bool bool_field = 8 [packed=false];
  repeated string string_field = 9 [packed=false];
  repeated TestMessage message_field = 10 [packed=false];
  repeated bytes bytes_field = 11 [packed=false];
  repeated uint32 uint32_field = 12 [packed=false];
  repeated TestEnum enum_field = 13 [packed=false];
  repeated sfixed32 sfixed32_field = 14 [packed=false];
  repeated sfixed64 sfixed64_field = 15 [packed=false];
  repeated sint32 sint32_field = 16 [packed=false];
  repeated sint64 sint64_field = 17 [packed=false];
}
